--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Haus</title>
   </head>
-  <body id="root"></body>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
